; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_os_web.c_mch_breakcheck.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_os_web.c_mch_breakcheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@curr_tmode = common dso_local global i64 0, align 8
@TMODE_RAW = common dso_local global i64 0, align 8
@read_cmd_fd = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mch_breakcheck() #0 {
  %1 = load i64, i64* @curr_tmode, align 8
  %2 = load i64, i64* @TMODE_RAW, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = load i32, i32* @read_cmd_fd, align 4
  %6 = call i64 @RealWaitForChar(i32 %5, i64 0, i32* null)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %4
  %9 = load i32, i32* @FALSE, align 4
  %10 = call i32 @fill_input_buf(i32 %9)
  br label %11

11:                                               ; preds = %8, %4, %0
  ret void
}

declare dso_local i64 @RealWaitForChar(i32, i64, i32*) #1

declare dso_local i32 @fill_input_buf(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
